      by Guenther).
    * BUG 3512: Fix cause of "use spnego=no" and "server signing=auto" 
      resulting in a client disconnect after negprot.
    * BUG 3510: Fix 'net join' against a server with client schannel 
      disabled.
    * Fix negprot bug causing a 2k client with cached domain 
      credentials to refuse to connect to a standalone Samba host.


o   Andrew Bartlett <abartlet@samba.org>
    * Fix domain joins from NT4 clients and password changes.


o   Richard Bollinger <rabollinger@gmail.com>.
    * Compile fix in pdbedit.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Break RHEL/Fedora packaging out to include a samba-docs rpm.
    * Remove use of /var/cache/samba from RHEL/Fedora packaging.
    * Fix bug in loadparm.c that caused builtin services to be also
      listed as external services (e.g. Spooler, NETLOGON, etc..).
    * Fix bug in the samr dispinfo enumeration code.
    * Add earlier checks to deny deleting a printer driver meta-data.


o   Guenther Deschner <gd@samba.org>
    * Add Account Policy LDAP attributes for eDirectory schema.


o   William JoJo <jojowil@hvcc.edu>
    * BUG 1870: Make nmblookup do a node status on all IP's when 
      requested.
    * BUG 2353: Fix clitar -F processing.


o   Volker Lendecke <vl@samba.org>
    * Fix the build for --with-aio-support.
    * Fix remote password changing if password must change is set.
    * Fix rpcclient to obey the -W parameter.
    * Fix segv in smbmount and the profiles tool.
    * Fix typo in pdbedit help text (reported by Karolin Seeger).


o   Vladimir Lettiev
    * Honour the $(DESTDIR) Makefile variable when installing 
      Python extensions.


o   Jason Mader <jason@ncac.gwu.edu>
    * Compiler warning fixes.


o   Lars Müller <lmuelle@samba.org>
    * Fix python build with older python versions.
    * Update dhcp.conf files in Debian packaging
    * SWAT welcome file updates
    * Compiler warning fixes.